[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "tribute-api"
version = "0.2.1"
description = "Simple library containing Pydantic models and Aiohttp-based client for Tribute API"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "LapisMYT", email = "nikitagavrilin005@gmail.com" },
]
dependencies = [
    "aiohttp>=3.13.3",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "ty>=0.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "aioresponses>=0.7.6",
]

[tool.ty.src]
exclude = [".venv"]

[tool.ruff]
fix = true

[tool.ruff.lint]
preview = true
select = [
    # fastapi
    "FAST",
    # flake8-2020
    "YTT",
    # flake8-annotations
    "ANN",
    # flake8-bandit
    "S",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-datetimez
    "DTZ",
    # flake8-debugger
    "T10",
    # flake8-errmsg
    "EM",
    # flake8-fixme
    "FIX",
    # flake8-future-annotations
    "FA",
    # flake8-gettext
    "INT",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-import-conventions
    "ICN",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-no-pep420
    "INP",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-pyi
    "PYI",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-slots
    "SLOT",
    # flake8-tidy-imports
    "TID",
    # flake8-type-checking
    "TC",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH",
    # isort,
    "I",
    # mccabe
    "C90",
    # numpy
    "NPY",
    # pandas
    "PD",
    # pep8-naming
    "N",
    # perflint
    "PERF",
    # pycodestyle
    "E", "W",
    # pydoclint
    "DOC",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pylint
    "PLC", "PLE", "PLR", "PLW",
    # pyupgrade
    "UP",
    # refurb
    "FURB",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    "ANN201", "ANN204", "PLR2004", "TRY301",
    "COM812", "PLR0917", "PLR0913", "S104",
    "E712", "PLR0904", "ANN003", "N818",
    "DOC502", "S101"
]
exclude = [".venv", "alembic/*"]
